force-app/main/default/objects/pse__Team_Schedule_Slot_Type__c/pse__Team_Schedule_Slot_Type__c.object-meta.xml
<CustomObject>
    <label>Team Schedule Slot Type</label>
    <nameField>
        <displayFormat>TSST-{0000}</displayFormat>
        <label>Team Schedule Slot Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Schedule Slot Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>