force-app/main/default/objects/pse__Team_Schedule_Slot_Type__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday, Blocking</fullName>
            </value>
            <value>
                <fullName>Weekday, Non-blocking</fullName>
            </value>
            <value>
                <fullName>Weekend, Blocking</fullName>
            </value>
            <value>
                <fullName>Weekend, Non-blocking</fullName>
            </value>
            <value>
                <fullName>Holiday, Blocking</fullName>
            </value>
            <value>
                <fullName>Holiday, Non-Blocking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>